# erp_system_backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  conftest.py  docker-compose.yml  openapi.json  pyproject.toml
.github/workflows/: tests.yml
backend/: __init__.py  exceptions.py
backend/admin/: security.py  views.py
backend/api/: deps.py  exception_handlers.py  main.py
backend/api/dependencies/: calendar.py  comments.py  evaluations.py  meetings.py  pagination.py  permissions.py  rbac.py  redis.py  reg_and_auth.py  tasks.py  teams.py  uow.py  users.py
backend/api/tests/: conftest.py  test_create_comments.py  test_login_api.py  test_permissions.py  test_register_api.py  test_tasks_api.py  test_teams_api.py  test_users_api.py
backend/api/tests/fixtures/: core.py  login.py  permissions.py  register.py  tasks.py  teams.py
backend/api/tests/test_comments_api/: test_create_comments.py  test_get_comments_api.py
backend/api/tests/test_evaluations_api/: test_evaluations_create.py  test_evaluations_read.py
backend/api/tests/test_meeting_api/: test_meetings_create.py  test_meetings_delete.py  test_meetings_read.py  test_meetings_update.py  utils.py
backend/api/tests/test_tasks_api/: test_delete_tasks.py  test_get_tasks.py  test_update_tasks.py
backend/api/v1/routers/: auth.py  calendar.py  comments.py  evaluations.py  meetings.py  register_code.py  tasks.py  teams.py  users.py
backend/auth/: repository.py  schemas.py  service.py
backend/auth/api/: auth_dependencies.py
backend/auth/api/v1/: auth.py  auth_api.py  register_code.py  register_code_api.py
backend/auth/tests/fixtures/: login_fixtures.py  register_fixtures.py
backend/auth/tests/test_api/: test_register_api.py
backend/auth/tests/test_repositories/: test_auth_repo.py
backend/auth/tests/test_services/: test_auth_service.py  (+1 more)
backend/bot/: schemas.py  service.py
backend/bot/api/: bot_auth_router.py  dependencies.py
backend/calendar/: schemas.py  service.py
backend/comment/: models.py  repository.py  schemas.py  service.py
backend/comment/api/: comments_dependencies.py
backend/comment/tests/: test_comment_repo.py  test_comment_service.py
backend/core/: base_repository.py  base_service.py  config.py  constants.py  enums.py  logger.py  policies.py  security.py  uow.py
backend/core/database/: __init__.py  engine.py  init_db.py  redis.py  repository.py
backend/core/schemas/: rbac.py  team.py  user.py
backend/core/services/: auth_service.py  rbac_service.py  team_service.py  user_service.py
backend/core/tasks_queue/: audit.py  broker.py  core_models.py
backend/core/tests/: conftest.py  test_uow.py
backend/core/utils/: cache.py  error_schemas.py  openapi_gen.py  secret_key_generator.py
backend/evaluation/: models.py  repository.py  schemas.py  service.py
backend/evaluation/api/: evaluations_dependencies.py
backend/evaluation/tests/: test_repo.py  test_service.py
backend/meeting/: models.py  repository.py  schemas.py  service.py
backend/meeting/api/: meetings_dependencies.py
backend/meeting/tests/: test_meeting_repo.py  test_meeting_schemas.py  test_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0b0bb150f666_add_invite_code.py  1302c260f757_.py  347c1f001408_fix_not_nullable_team.py  401016f51a60_added_meetings_and_mtm.py  4a619b3e3db4_add_tasks.py  4e4484d955da_added_meetings_crud.py  5f9a98033223_добавил_индексы.py  6786b51d723e_add_logs.py  723416539a9b_init.py  7f53d3c9e7f2_add_comments.py  7f7f35dba9db_init.py  b0c6c9181c05_initial_rbac_and_users.py  c9ab59aa1373_init.py  f2d7e437ad61_add_team_model.py
backend/rbac/: models.py  repository.py  schemas.py  service.py
backend/rbac/api/: permissions_dependencies.py  rbac_dependencies.py
backend/rbac/tests/: conftest.py  test_permissions.py  test_rbac_repo.py  test_rbac_service.py  test_redis.py
backend/task/: models.py  repository.py  schemas.py  service.py
backend/task/api/: tasks_dependencies.py
backend/task/tests/: test_task_repo.py  test_task_service.py
backend/team/: models.py  repository.py  schemas.py  service.py
backend/team/api/: teams_dependencies.py
backend/team/tests/: test_team_repo.py  test_team_service.py
backend/user/: models.py  repository.py  schemas.py  service.py
backend/user/api/: users_dependencies.py
backend/user/tests/: conftest.py  test_auth_service.py  test_register_service.py
docs/: API Features.md
infra/: Dockerfile  docker-compose.yml  entrypoint.sh
tests/: conftest.py
tests/fixtures/: environment.py  environment_fixtures.py  environment_setup.py  init_db_fixtures.py
tests/fixtures/api/: core.py  login.py  register.py  teams.py
tests/test_api/: test_teams_api.py
(+40 files in other folders)
