[project]
name = "business-managment-platform"
version = "0.1.0"
description = "Web-application for command management"
authors = [
    { name = "Владислав Сороковых", email = "black.walf16@gmail.com" }
]
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "python-multipart (>=0.0.29,<0.0.30)",
    "tenacity (>=9.1.4,<10.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.13,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)",
]

[tool.ruff]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "backend/migrations/versions",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=backend --cov-report=term-missing"