[project]
name = "erp_system_backend"
version = "0.1.0"
description = "Web-application for command management"
authors = [
    { name = "Владислав Сороковых", email = "black.walf16@gmail.com" }
]
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "python-multipart (>=0.0.29,<0.0.30)",
    "tenacity (>=9.1.4,<10.0.0)",
    "sqladmin (>=0.27.1,<0.28.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "redis (>=8.0.0,<9.0.0)",
    "sentry-sdk[fastapi] (>=2.63.0,<3.0.0)",
    "prometheus-fastapi-instrumentator (>=8.0.2,<9.0.0)",
    "taskiq (>=0.12.4,<0.13.0)",
    "taskiq-aio-pika (>=0.6.0,<0.7.0)",
    "taskiq-fastapi (>=0.5.0,<0.6.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.13,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]

[tool.ruff]
# Фиксируем версию Python для правильных подсказок
target-version = "py312"

exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
    "alembic",
    "migrations"
]

line-length = 120

[tool.ruff.lint]
select = [
    "E", # Стандартные ошибки PEP8 (pycodestyle)
    "F", # Логические ошибки, неиспользуемые переменные (Pyflakes)
    "I", # Автоматическая сортировка импортов (isort)
    "UP", # Автоматический апгрейд синтаксиса до Python 3.12 (pyupgrade)
    "B", # Поиск неочевидных багов, например, mutable defaults (flake8-bugbear)
    "C4", # Улучшение работы со списками и словарями (flake8-comprehensions)
    "SIM", # Советы по упрощению логики кода (flake8-simplify)
]

# Какие правила игнорировать (обычно это конфликтующие с форматтером вещи)
ignore = [
    "B008", # Разрешаем вызовы функций в аргументах
]

[tool.ruff.format]
# Настройки форматтера
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
# Группировка импортов, чтобы всё было красиво
known-first-party = ["backend"] # Основной модуль будет отделен пустой строкой

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=backend --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "backend/migrations/*", # Исключаем папку с миграциями
    "backend/*/tests/*", # Исключаем сами тесты (нам ведь не нужно измерять покрытие тестов тестами)
    "backend/api/tests/*", # Исключаем общую папку тестов API
    "backend/conftest.py", # Исключаем базовые фикстуры
    "backend/core/utils/*",
    "backend/core/logger.py",
    "backend/core/enums.py",
    "backend/core/config.py",
    "backend/core/base_service.py",
    "backend/core/base_repository.py",
    "backend/core/policies.py",
    "backend/*/models.py",
    "backend/*/__init__.py",
    "backend/*/*/__init__.py",
    "backend/*/*/*/__init__.py",
]
